fixed prediction title and stock title spacing and hovers

--- a/app/assets/stylesheets/partials/stockpage-graph.css.scss
+++ b/app/assets/stylesheets/partials/stockpage-graph.css.scss
@@ -46,13 +46,33 @@
 
 .stock-name-center {
 	display: inline-block;
-	margin-top: 27px;
+	margin-top: 9px;
+	margin-bottom: 9px;
 }
 
-.stock-name-center p {
+.stock-name-center p a {
 	font-size: 33px;
 	text-align: center;
+	text-decoration: none;
 	font-weight: 300;
+	color: rgba(255, 255, 255, .85);
+}
+
+.stock-name-center p a {
+	font-size: 33px;
+	text-align: center;
+	text-decoration: none;
+	font-weight: 300;
+	color: rgba(255, 255, 255, .85);
+
+  -webkit-transition: 150ms ease-in;
+  -moz-transition: 150ms ease-in;
+  -o-transition: 150ms ease-in;
+  transition: 150ms ease-in;
+}
+
+.stock-name-center p a:hover {
+	text-decoration: none;
 	color: rgba(255, 255, 255, 1);
 }
 
@@ -102,7 +122,8 @@
 
 .prediction-name-center {
 	display: inline-block;
-	margin-top: 27px;
+	margin-top: 9px;
+	margin-bottom: 9px
 }
 
 .prediction-name-title-name {
@@ -127,11 +148,20 @@
 	border: 1px solid rgba(255, 255, 255, 1);
 }
 
-.prediction-name-title {
+.prediction-name-title a {
 	display: inline-block;
+	text-decoration: none;
 	vertical-align: 9%;
 	font-size: 33px;
 	font-weight: 300;
+	color: rgba(255, 255, 255, .85);
+  -webkit-transition: 150ms ease-in;
+  -moz-transition: 150ms ease-in;
+  -o-transition: 150ms ease-in;
+  transition: 150ms ease-in;
+}
+
+.prediction-name-title a:hover {
 	color: rgba(255, 255, 255, 1);
 }
 
@@ -148,7 +178,7 @@
 	display: block;
 	margin: auto;
 	text-align: center;
-	color: #C7C7C7;
+	color: rgba(255,255,255,.85);
 	font-size: 24px;
 
   -webkit-transition: 150ms ease-in;
@@ -158,7 +188,7 @@
 }
 
 .prediction-name-vote-count a:hover {
-	color: #7cb5ec;
+	color: rgba(255,255,255,.85);
 }
 
 .prediction-name-vote-count p {
